OpafProjectVisualForcePages/force-app/main/default/objects/AccountContactRelation/fields/HealthCloudGA__PrimaryGroup__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__PrimaryGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a person&apos;s primary group</description>
    <label>Primary Group</label>
    <type>Checkbox</type>
</CustomField>