OpafProjectVisualForcePages/force-app/main/default/objects/AccountContactRelation/fields/HealthCloudGA__Rollups__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Rollups__c</fullName>
    <label>Rollups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Tasks</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>